@@ -1,3 +1,11 @@
+[2018-09-22 11:15:32 +0200]  zd firmware package was removed                                            karasu      {6e4777c4}
+[2018-09-22 11:01:52 +0200]  Version bump                                                               karasu      {189505c9}
+[2018-09-16 00:41:40 +0200]  Merge pull request #1089 from amoto/patch-1                            Gustau Castells {1ac7e56a}
+[2018-09-15 17:01:36 +0000]  Fix rankmirrors bug                                                    Julián David Devia Serna {6b7bb40d}
+[2018-09-13 09:49:22 +0200]  Just in case...                                                            karasu      {9d3ab872}
+[2018-09-09 18:55:46 +0200]  workaround for a bug in antergos-iso, enables multilib only if it i..      karasu      {4467e78f}
+[2018-09-04 10:57:30 +0200]  Fix bug in mirrors.py                                                      karasu      {de2cd052}
+[2018-08-25 18:16:41 +0200]  [updpkg] packages.xml                                                      karasu      {324086ab}
 [2018-08-25 12:32:03 +0200]  Replace qtcurve-qt4 with qtcurve-qt5                                       karasu      {b38a7cd6}
 [2018-08-25 12:09:46 +0200]  kdesudo has been dropped (by Antergos)                                     karasu      {7b3f42cc}
 [2018-08-25 12:00:38 +0200]  breeze-qt4 has been removed                                                karasu      {a2e3e40a}
